# havoc

./: Cargo.toml  Jenkinsfile  LICENSE  README.md
examples/: gateway.json  gateway.yaml  havoc.schema.json
examples/proto/: auth.proto  book.proto  review.proto
proto_def/: Cargo.toml
proto_def/src/: lexer.rs  lib.rs  model.rs  parser.rs
schemas/: havoc.schema.json
schemas/v0.1/: config.json
src/: framework.rs  main.rs
src/framework/: factory.rs  mod.rs  type_mapper.rs
src/parser/: factory.rs  json.rs  mod.rs  yaml.rs
src/parser/formats/: json.rs  mod.rs  yaml.rs
src/scaffolder/: axum.rs  factory.rs  mod.rs  nestjs.rs
src/scaffolder/filters/: camel_case.rs  capitalize.rs  lower_case.rs  mod.rs  snake_case.rs
src/scaffolder/frameworks/: axum.rs  mod.rs  spring.rs
templates/: Cargo.toml  Dockerfile
templates/axum/: Cargo.toml
templates/axum/src/: main.rs.tera
templates/axum/src/http/: error.rs.tera  mod.rs.tera
templates/axum/src/http/service/: mod.rs.tera
templates/spring/: build.gradle
templates/spring/src/main/java/com/example/gateway/controller/: controller.java.tera
templates/spring/src/main/java/com/example/gateway/service/: service.java.tera
templates/spring/src/main/resources/: application.properties.tera
