[package]
name = "havoc"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = {version = "4.5.41", features = ["derive"] }
include_dir = "0.7.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yml = "0.0.12"
tera = "1.20.0"
tonic-build = "0.13.1"
proto_def = {path = "./proto_def"}
